[package]
name = "rust-db-compare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# 默认的镜像源设置
[source.crates-io]
replace-with = 'tuna'

# 清华大学镜像源
[source.tuna]
registry = "https://mirrors.tuna.tsinghua.edu.cn/git/crates.io-index.git"

[dependencies]
mysql = "24.0.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
